--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ src="images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_
 </div>
 <div id="screencast" class="section level2">
 <h2>Screencast</h2>
-<p>{% include youtube.html id=“e6ylMwhOCwU” %}</p>
+<p><a href="https://youtu.be/e6ylMwhOCwU">Screencast</a></p>
 </div>
 <div id="github-repo-link" class="section level2">
 <h2>GitHub Repo Link</h2>
