knitted embedded video

--- a/index.html
+++ b/index.html
@@ -381,6 +381,8 @@ src="images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_
 <div id="screencast" class="section level2">
 <h2>Screencast</h2>
 <p><a href="https://youtu.be/e6ylMwhOCwU">Screencast</a></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e6ylMwhOCwU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 </div>
 <div id="github-repo-link" class="section level2">
 <h2>GitHub Repo Link</h2>
