--- a/index.html
+++ b/index.html
@@ -378,10 +378,13 @@ NYC?</h1>
 <p><img
 src="images/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_7347_FRD_(cropped).jpg" /></p>
 </div>
-<div id="screencast" class="section level2">
-<h2>Screencast</h2>
+<div id="screencast-link" class="section level2">
+<h2>Screencast link</h2>
 <p><a href="https://youtu.be/e6ylMwhOCwU">Screencast</a></p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/e6ylMwhOCwU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</div>
+<div id="screencast-embed" class="section level2">
+<h2>Screencast embed</h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e6ylMwhOCwU" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 <div id="github-repo-link" class="section level2">
