--- a/data_processing.html
+++ b/data_processing.html
@@ -363,7 +363,7 @@ div.tocify {
 
 
 <div id="data-cleaning-and-pre-processing" class="section level2">
-<h2>### Data Cleaning and Pre-Processing</h2>
+<h2>Data Cleaning and Pre-Processing</h2>
 <pre><code>##   restaurant                    rest_type           year     
 ##  Length:217653      beverages_dessert: 25582   Min.   :2008  
 ##  Class :character   convenience      : 15058   1st Qu.:2014  
